--- a/Tracking Buses Take 1.html
+++ b/Tracking Buses Take 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Distance Matrix service</title>
+    <title>Bus Tracker</title>
     <style>
       
       html, body {
