--- a/Tracking Buses SE/Tracking Buses SE/TrackingBusesTake1.html
+++ b/Tracking Buses SE/Tracking Buses SE/TrackingBusesTake1.html
@@ -36,7 +36,7 @@
       <option value="40.708,-74.000">Bus4</option>
       <option value="41.755,-88.141">Cafe</option>
     </select>
-    <b>Your Loaction: </b>
+    <b>Your Location: </b>
     <select id="end">
       <option value="40.710,-74.000">You</option>
       <option value="41.760,-88.156">Nap C</option>
