--- a/Tracking Buses Take 1.html
+++ b/Tracking Buses Take 1.html
@@ -20,7 +20,7 @@
       
   </head>
   <body>
-    <b>Your Loaction: </b>
+    <b>Your Location: </b>
     <select id="end">
       <option value="40.710,-74.000">You</option>
       <option value="41.760,-88.156">Nap C</option>
